@@ -17,7 +17,7 @@
 
 =sys-kernel/calckernel-3.4.15-r4
 =sys-kernel/calckernel-3.4.15-r5
-#=sys-kernel/calculate-sources-2.6.32.33
+=sys-kernel/calculate-sources-2.6.38.3
 #>=app-misc/cld-meta-10.9.1
 #>=app-misc/cldg-meta-10.9.1
 #>=app-misc/cldx-meta-10.9.1
