@@ -5,7 +5,7 @@ AUX calckernel-3.4.15-r1.patch 13899 RMD160 6f6080294c0164015d015bb5b1601f7c4dda
 AUX calckernel-3.4.15-r2.patch 13904 RMD160 b687bf222bf365413115a3be20d97ab4aec1e85a SHA1 6102e0ea9f216ca3b1c8b1428b1721b69f014912 SHA256 2ebf3873639f10c1ea13dabb05b782afc34cef6f6b33e23462bf00ae975c63e7
 AUX calckernel-3.4.15-r3.patch 13883 RMD160 187e02f6b414dc5dd5336aeb6a5a8a107f3a2821 SHA1 3f91b686212f8be35a91f2be6d52dcc66644a282 SHA256 cc7a94cfc8eac55f5540677d25e6c6836d3f1832ce5b51d58c5ae06297764d7e
 AUX calckernel-3.4.15-r4.patch 58770 RMD160 0de5b7fd55426b818cc593aa7e66f8ef8e5428a2 SHA1 5f45975e4988ec42615f548cb94c76276c66ec78 SHA256 481100ba1953fb5847354e538adfbf5b3b0f1a023fbb1d9ab7bead4c807b12da
-AUX calckernel-3.4.15-r5.patch 59954 RMD160 9325b8f2a8848fd0f447f6d95a5d74142f1918db SHA1 e73dc0b44d7e67fd844f9a6bcee1826e9ca60e76 SHA256 a825a314f00b45c2e954075832890b600e633f0b2d1920c65c47677a7cc463a0
+AUX calckernel-3.4.15-r5.patch 60229 RMD160 03fbdd8f2cd69ff46dd6502e32ee9ec07fea4631 SHA1 535c9621ef9135126191f6832472db3e4cd96174 SHA256 cc19f4cc3abd79fedce637908d289d0ddcdc9d60b75508655a90f1b17cf541f2
 AUX calckernel-3.4.15.patch 13787 RMD160 a6eb1916694715c05fe936df493e9432245f7a76 SHA1 1b138bde0977e3bdd0ab4f69851d13a8e3fec361 SHA256 a0a8b840ff15a0dac9b1d330e5aa95df06c400b870b86341795516f1ff795f08
 AUX genkernel.bash 2438 RMD160 b3d8e4436d8768c07d18c5aaff9c14fc16641729 SHA1 e15a9c6ef506aa6872a6a97d26751246dedded04 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248
 DIST LVM2.2.02.28.tgz 531905 RMD160 bf6f25db6e34bf362353ae9557691a7f01962502 SHA1 6eb2f6e1228b017ad23d0b7f2bb12fd113f96616 SHA256 2d8d7b123e427d0bfb7471d7c17dfd88890eb98257ca22ea3be5d7307e83aceb
@@ -30,7 +30,6 @@ EBUILD calckernel-3.4.14.ebuild 5478 RMD160 ba88c027ef64dd905089f7daa7faec58e102
 EBUILD calckernel-3.4.15-r1.ebuild 5480 RMD160 07b014611614e717f463f3b765fd43c5d0f5dcbd SHA1 218157afd697e0d58ab3e3af7d50e9d59245575f SHA256 86da96b3d511421aa0bfa6138f90842d3931c31e9b10117d51158e27775d3370
 EBUILD calckernel-3.4.15-r2.ebuild 5478 RMD160 ac83eeb2fb02ea4bc4f2bc4fc35f4f570da9a9d8 SHA1 46950769a2643e2c5b8aff079eb8c0294bd6eb07 SHA256 52d772ad78161d39761dce2540fad0b971c022d90ffc4e3c1ca6e386cf62f8ba
 EBUILD calckernel-3.4.15-r3.ebuild 5481 RMD160 6e9c85bb682828cd8d6379ab28ddc4a8a4feab54 SHA1 a886023333f54e7a86b37b255be5663265253492 SHA256 574cdfa61ad83de0d88a820d03cf63bd40b05f19e25cf2ceaa90821eb5c5c771
-EBUILD calckernel-3.4.15-r4.ebuild 5509 RMD160 600298a040380324c89aee3abd68d75920d6d2f1 SHA1 daef1be9260dbbcf87db822ff622188086cb5ea6 SHA256 ee9f4642e2ad88dfcff36da54724c445603a054932b7d04d4c99c42ccff5ac69
 EBUILD calckernel-3.4.15-r5.ebuild 5509 RMD160 600298a040380324c89aee3abd68d75920d6d2f1 SHA1 daef1be9260dbbcf87db822ff622188086cb5ea6 SHA256 ee9f4642e2ad88dfcff36da54724c445603a054932b7d04d4c99c42ccff5ac69
 EBUILD calckernel-3.4.15.ebuild 5480 RMD160 07b014611614e717f463f3b765fd43c5d0f5dcbd SHA1 218157afd697e0d58ab3e3af7d50e9d59245575f SHA256 86da96b3d511421aa0bfa6138f90842d3931c31e9b10117d51158e27775d3370
 MISC ChangeLog 1419 RMD160 1f805cf677fba99dc2d1aeb007caa368d78976c7 SHA1 4a7e736d24e78ac0d0d7d15f99a04a2e6b1eb111 SHA256 3d2c11b4e602114caafe9e58534f9d4a9603047c4dc4b9bc83d5bd9a79b20ebb
