@@ -35,6 +35,7 @@ DIST patch-2.6.36.3.bz2 140429 RMD160 2284b5940481e62e6e1b91c4f324333ecc3dba8d S
 DIST patch-2.6.36.4.bz2 186814 RMD160 ed06acb39f2e272d388bb04810d0d9626c70fa55 SHA1 7c2cb8f0f7957af3fbc56cbf0a012465cf66c9ec SHA256 77186bff89a5ae7e289b33b7e721921fecd978a2df05b0e69bdafc1a9bfa30f2
 DIST patch-2.6.37.4.bz2 139328 RMD160 1e5ee5b5ea9cf52dc839ae49d83687024acbab9a SHA1 baacae8e8bbfbb80cfa9aa2a0aff7ac8e315b56a SHA256 6c0352055d5502fb177eb573a881629dcf5dc979342293fde08d782a17b5d68c
 DIST patch-2.6.38.2.bz2 47827 RMD160 ea9caa39c7a94ee7aca536270dfb47e22f28ecd9 SHA1 d12aee147a1dc94ea8cc86f12155c52a6a526066 SHA256 8279d5b883cb44f4d3cf28b4db9b3c37c9c6dba45bb5884e8601950ee59892c4
+DIST patch-2.6.38.3.bz2 77144 RMD160 481a5f3286be77edafb237ec7bd8ee49fff52fe0 SHA1 c53f1e25e33be6793173f437da8f8e12af60498f SHA256 cc7fe37725d940987800c73c38484e7c8388936b332fca9918aae4dca15be10b
 EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
 EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
 EBUILD calculate-sources-2.6.32.33.ebuild 747 RMD160 77bb94e00e846a787758c292ad449687ef756d08 SHA1 b907c1681d7b749780b519e9c4d17032fab3da84 SHA256 2ca22d6ad7b2e2a20d42c77462043bc359e36dc73d144231b758ac408885e988
@@ -44,5 +45,6 @@ EBUILD calculate-sources-2.6.36.3.ebuild 1330 RMD160 ea0f8e3d725f9acdbc0ada77556
 EBUILD calculate-sources-2.6.36.4.ebuild 1323 RMD160 ecb6cf249532f9a433998d28090e24c7fac07230 SHA1 720402d6d706442ad16caa683a759732920c6763 SHA256 ec8750d3edb912949380570f7170233757a9e854b87b1e6126988984a1a073f4
 EBUILD calculate-sources-2.6.37.4.ebuild 1361 RMD160 e38a207a34b65fb836b2c04ca396235d52a43985 SHA1 fc6cdb63c260c00e9ddb2376e8dc40f8f2e9c2e0 SHA256 4fc12a27e9fc5050c979693f00c92158a17f75541b9f0c73c32faca47987e5d5
 EBUILD calculate-sources-2.6.38.2.ebuild 741 RMD160 95397fefb54edc985b8d81bdede0a785164ceeab SHA1 3d6199f19278b9cd535537bb2d377cb8d9627ba8 SHA256 e4b9370aa0be58589f86c78f61c788a1e45b9fef2e2667a3a9256adba48f834c
-MISC ChangeLog 5411 RMD160 8a09141a01002b85c529838477b8b1ad7c594633 SHA1 c98b7902a2aa4fb7377f36a72c25e19a545099d6 SHA256 a28bc5ba5c190b2330e0f326346f3ed42bc8f14521caf4a46bcb73424ecb364d
+EBUILD calculate-sources-2.6.38.3.ebuild 761 RMD160 030d3f10a20866a95f02f3d4b929698cc6d9f9f8 SHA1 7a067ae38bebf8d604f979d1028e18ad7e3aaedd SHA256 5d8b1b81f52575e6c88432004d4d934c05763a41cde5375dc87cf2a61e854f95
+MISC ChangeLog 5569 RMD160 f3b637ae3db31ca6bc14dd40514f46ec748036c1 SHA1 0f558079236ad9a21e5a5c8793593754e3796d9e SHA256 42f8d623bc83008746a02aa3ae1c3043eee534e1139ae5cc9554e50f30619928
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
