@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.38.3 (19 Apr 2011)
+
+  19 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-sources-2.6.38.3.ebuild:
+  Bump version.
+
   22 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-sources-2.6.32.33.ebuild, calculate-sources-2.6.36.4.ebuild,
   calculate-sources-2.6.37.4.ebuild:
